# docs/swagger.yaml
@@ -93,43 +93,7 @@ paths:
       summary: Recuperación de contraseña
       tags:
       - Auth
-  /public/register:
-    post:
-      consumes:
-      - application/json
-      description: Permite registrar un nuevo usuario con su correo y contraseña
-      parameters:
-      - description: Datos del usuario a registrar
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/handlers.RegisterRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Usuario creado exitosamente
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: 'Solicitud incorrecta: los datos no son válidos'
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Error interno al registrar el usuario
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Registrar un nuevo usuario
-      tags:
-      - Auth
-  /publications:
+  /public/posts:
     get:
       consumes:
       - application/json
@@ -196,7 +160,43 @@ paths:
       summary: Crear una nueva publicación
       tags:
       - Post
-  /users:
+  /public/register:
+    post:
+      consumes:
+      - application/json
+      description: Permite registrar un nuevo usuario con su correo y contraseña
+      parameters:
+      - description: Datos del usuario a registrar
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Usuario creado exitosamente
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: 'Solicitud incorrecta: los datos no son válidos'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Error interno al registrar el usuario
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Registrar un nuevo usuario
+      tags:
+      - Auth
+  /public/users:
     get:
       consumes:
       - application/json
